# ph-civic-data-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  glama.json  pyproject.toml  server.json  smithery.yaml
.claude/: settings.json
docs/: SUBMISSIONS.md  demo.tape  demo_accountability.tape  demo_correlation.tape  demo_setup.tape  demo_setup_linkedin.tape  live_demo.py  live_demo_single.py  live_demo_v030.py  live_probe_v020.py  live_probe_v030.py  make_demo.py  record_all.sh
src/ph_civic_data_mcp/: __init__.py  server.py
src/ph_civic_data_mcp/models/: __init__.py  air_quality.py  climate.py  earthquake.py  infra.py  location.py  population.py  procurement.py  weather.py
src/ph_civic_data_mcp/sources/: cross_source.py  emb.py  ibtracs.py  infra.py  modis_ndvi.py  nasa_power.py  open_meteo_aq.py  pagasa.py  philgeps.py  phivolcs.py  psa.py  psgc.py  usgs.py  world_bank.py
src/ph_civic_data_mcp/utils/: cache.py  geo.py  http.py
tests/: test_cross_source.py  test_emb.py  test_infra.py  test_pagasa.py  test_philgeps.py  test_phivolcs.py  test_psa.py  test_psgc.py  test_v020_sources.py  test_v030_cross_source.py  test_v030_live.py
